# nonebot-plugin-sanyao

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py
.github/workflows/: python-publish.yml  test.yml
nonebot-plugin-sanyao/: sanyao.py
nonebot_plugin_sanyao/: __init__.py  __main__.py  sanyao.py
nonebot_plugin_sanyao/plugin/: __init__.py
nonebot_plugin_sanyao/plugins/: __init__.py
nonebot_plugin_sanyao/plugins/foo2/: __init__.py
nonebot_plugin_sanyao/plugins/xt/: __init__.py
nonebot_plugin_sanyao/util/: format_results.py  main.py  paipan.py  sanyaoyi.py
src/nonebot_plugin_sanyao/: __init__.py
tests/: conftest.py  test_example.py
