[project]
name = "sanyao"
version = "0.2.0"
description = "sanyao"
readme = "README.md"
requires-python = ">=3.8, <4.0"

[tool.nonebot]
adapters = [
    { name = "OneBot V11", module_name = "nonebot.adapters.onebot.v11" }
]
plugins = []
plugin_dirs = ["nonebot_plugin_sanyao/plugins"]
builtin_plugins = ["echo"]
