[project]
name = "nonebot-plugin-sanyao"
version = "0.1.4"
authors = [
    {name="afterow", email="afterow@163.com"}
]
description = "三爻易数排盘"
readme = "README.md"
license = { text = "MIT License" }
requires-python = ">=3.10, <4.0"
dependencies = [
    "cnlunar",
]
classifiers = [
    "Framework :: Pydantic",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Natural Language :: Chinese (Simplified)"
]

[tool.nonebot]
adapters = [
    { name = "OneBot V11", module_name = "nonebot.adapters.onebot.v11" }
]
plugins = []
plugin_dirs = ["src"]
builtin_plugins = []

[tool.setuptools.packages.find]
where = ["src"]
include = []

[build-system]
requires = ["setuptools >= 65.6.3"]
build-backend = "setuptools.build_meta"

[project.urls]
"Homepage" = "https://github.com/afterow/nonebot-plugin-sanyao"
"Bug Tracker" = "https://github.com/afterow/nonebot-plugin-sanyao/issues"